bundler_error.log
Starting Metro Bundler

SyntaxError: SyntaxError: C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\src\services\SyncService.js: Expecting Unicode escape sequence \uXXXX. (118:61)

  116 |
  117 |                         const placeholders = rowKeys.map(() => '?').join(', ');
> 118 |                         const escapeKeys = rowKeys.map(k => \`"\${k}"\`).join(', ');
      |                                                              ^
  119 | 
  120 |                         const updateAssignments = rowKeys
  121 |                             .filter(k => k !== pk)
SyntaxError: C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\src\services\SyncService.js: Expecting Unicode escape sequence \uXXXX. (118:61)

  116 |
  117 |                         const placeholders = rowKeys.map(() => '?').join(', ');
> 118 |                         const escapeKeys = rowKeys.map(k => \`"\${k}"\`).join(', ');
      |                                                              ^
  119 | 
  120 |                         const updateAssignments = rowKeys
  121 |                             .filter(k => k !== pk)
    at constructor (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:365:19)
    at FlowParserMixin.raise (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:6599:19)
    at FlowParserMixin.readWord1 (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:6559:16)
    at FlowParserMixin.readWord (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:6579:23)
    at FlowParserMixin.getTokenFromCode (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:6298:14)
    at FlowParserMixin.getTokenFromCode (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:4797:11)
    at FlowParserMixin.getTokenFromCode (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:3197:13)
    at FlowParserMixin.nextToken (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:5782:10)
    at FlowParserMixin.next (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:5692:10)
    at FlowParserMixin.parseExprAtom (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:11437:18)
    at FlowParserMixin.parseExprAtom (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:4764:20)
    at FlowParserMixin.parseExprSubscripts (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:11081:23)
    at FlowParserMixin.parseUpdate (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:11066:21)
    at FlowParserMixin.parseMaybeUnary (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:11046:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:10899:61)
    at FlowParserMixin.parseExprOps (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:10904:23)
    at FlowParserMixin.parseMaybeConditional (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:10881:23)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:10831:21)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:3549:18)
    at C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:10800:39
    at FlowParserMixin.allowInAnd (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:12426:12)
    at FlowParserMixin.parseMaybeAssignAllowIn (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:10800:17)
    at FlowParserMixin.parseMaybeAssignAllowInOrVoidPattern (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:12493:17)
    at FlowParserMixin.parseExprListItem (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:12175:18)
    at FlowParserMixin.parseCallExpressionArguments (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:11252:22)
    at FlowParserMixin.parseCoverCallAndAsyncArrowHead (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:11186:29)
    at FlowParserMixin.parseSubscript (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:11120:19)
    at FlowParserMixin.parseSubscript (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:3650:18)
    at FlowParserMixin.parseSubscripts (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:11094:19)
    at FlowParserMixin.parseSubscripts (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:3616:18)
    at FlowParserMixin.parseExprSubscripts (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:11085:17)
    at FlowParserMixin.parseUpdate (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:11066:21)
    at FlowParserMixin.parseMaybeUnary (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:11046:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:10899:61)
    at FlowParserMixin.parseExprOps (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:10904:23)
    at FlowParserMixin.parseMaybeConditional (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:10881:23)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:10831:21)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:3549:18)
    at C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:10800:39
    at FlowParserMixin.allowInAnd (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:12421:16)
    at FlowParserMixin.parseMaybeAssignAllowIn (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:10800:17)
    at FlowParserMixin.parseVar (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:13384:91)
    at FlowParserMixin.parseVarStatement (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:13230:10)
    at FlowParserMixin.parseStatementContent (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:12851:23)
    at FlowParserMixin.parseStatementLike (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:12767:17)
    at FlowParserMixin.parseStatementLike (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:2918:24)
    at FlowParserMixin.parseStatementListItem (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:12747:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:13316:61)
    at FlowParserMixin.parseBlockBody (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:13309:10)
    at FlowParserMixin.parseBlock (C:\Users\Bruno\Documents\AppAgro\agrogb-mobile.-main\node_modules\@babel\parser\lib\index.js:13297:10)
